--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,5 +27,31 @@ jobs:
         path: artifacts
         retention-days: 1
 
+  create_release:
+    name: Create GitHub release
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    concurrency: build_${{ github.ref }}
+
+    # only run this for a push to the main branch
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+    - name: Checkout Source
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+
+    - name: Download artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: artifacts
+        path: artifacts
+
+    - name: Create release
+      env:
+        GitHub_Access_Token: ${{ secrets.GITHUB_TOKEN }}
+      run: ./build.sh --target PublishToGitHub --skip PublishArtifacts
+
 
 
