--- a/test/Sknet.OpenIddict.LiteDB.Tests/Sknet.OpenIddict.LiteDB.Tests.csproj
+++ b/test/Sknet.OpenIddict.LiteDB.Tests/Sknet.OpenIddict.LiteDB.Tests.csproj
@@ -15,9 +15,11 @@
     <PackageReference Include="AutoBogus.Moq" Version="2.13.1" />
     <PackageReference Include="AutoBogus.Templating" Version="2.13.1" />
     <PackageReference Include="Bogus" Version="34.0.2" />
+    <PackageReference Include="DiffEngine" Version="10.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="NCrunch.Framework" Version="4.7.0.4" />
     <PackageReference Include="Verify.Xunit" Version="17.10.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -33,5 +35,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Sknet.OpenIddict.LiteDB\Sknet.OpenIddict.LiteDB.csproj" />
   </ItemGroup>
+  
+  <PropertyGroup>
+    <DefaultItemExcludes>$(DefaultItemExcludes);**/*.received.txt;**/*.ncrunchproject</DefaultItemExcludes>
+  </PropertyGroup>
 
 </Project>
